@startuml


class TrackRecord {
    - channel : number
    + name: string
}

class Track {
}

class MidiListRecord {
    - notes : Note
}

class MidiList {
    getNotes()
    addNote()
    removeNote()
}


class ClipRecord {
    + name : string
    + lengthInBeats : number
    + loopLengthInBeats: number
    - color: Array<number>
}


class MidiClipRecord {
    - midiList : MidiList
}


class MidiClip {
    + constructor(parsedMidi?: MidiFile)
    - updateByMidiFile
}

class NoteRecord {
    - startBeat : number
    - lengthInBeats : number
    - noteNumber : number
    - velocity : number
    - color : List[3]<number> 
}

class MidiNote {
    getStartBeat()
    getEndBeat()
    getLengthBeat()
}

class Editor {
    + clipID : number
}


Store o-- Project
Project "1" o-- "0..*" Track
Store o-- Editor
Editor o-- ClipRecord
Editor o-- Tool
Tool <-- PenTool
Tool <-- MoveTool
Tool <-- EraserTool
Tool <-- SelectTool


TrackRecord <-- Track
Track "1" o-- "0..*" ClipRecord


ClipRecord <-- MidiClipRecord
MidiClipRecord <-- MidiClip
ClipRecord <-- AudioClip

MidiList "1" o-- "0..*" MidiNote
NoteRecord <-- MidiNote

MidiClip o-- MidiList
MidiListRecord <-- MidiList

@enduml